--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ channels = ["https://prefix.dev/pixi-build-backends", "conda-forge"]
 
 [tool.pixi.package.host-dependencies]
 hatchling = "*"
+
 [tool.pixi.tasks]
 test = { cmd = "pytest" }
 
@@ -41,6 +42,7 @@ naga = {path = "."}
 [tool.pixi.feature.test.dependencies]
 pytest = ">=8.3.2,<9"
 pytest-mock = ">=3.14.0,<4"
+ipython = "*"
 
 [tool.pixi.feature.test.pypi-dependencies]
 naga = { path = ".", editable = true }
@@ -54,6 +56,7 @@ mlflow = ">=3.2.0,<4"
 joblib = ">=1.5.2,<2"
 pandas = ">=2.3.2,<3"
 submitit = ">=1.5.2,<2"
+ipython = "*"
 
 [tool.pixi.pypi-dependencies]
 dirhash = ">=0.5.0, <0.6"
