--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # pixi environments
 .pixi/*
 !.pixi/config.toml
-/hwrf_uv_fcst_2504_12.zarr
 **/__pycache__
 .env
 .pytest_cache
-naga.egg-info
+flexlock.egg-info
 trash
 *.conda
+mlruns
