--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "naga"
+name = "flexlock"
 version = "0.1.0"
 authors = [ {name="Quentin Febvre", email="quentin.febvre@gmail.com"} ]
-description = "A lightweight and painless MLOps library"
+description = "A lightweight and painless SciOps library"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
@@ -12,7 +12,7 @@ build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["naga"]
+packages = ["flexlock"]
 only-packages = true
 
 [tool.pixi.workspace]
@@ -20,9 +20,8 @@ channels = ["conda-forge"]
 platforms = ["linux-64"]
 preview = ["pixi-build"]
 
-
 [tool.pixi.package]
-name = "naga"
+name = "flexlock"
 version = "0.1.0"
 
 [tool.pixi.package.build.backend]
@@ -37,7 +36,7 @@ hatchling = "*"
 test = { cmd = "pytest" }
 
 [tool.pixi.feature.build.dependencies]
-naga = {path = "."}
+flexlock = {path = "."}
 
 [tool.pixi.feature.test.dependencies]
 pytest = ">=8.3.2,<9"
@@ -45,7 +44,7 @@ pytest-mock = ">=3.14.0,<4"
 ipython = "*"
 
 [tool.pixi.feature.test.pypi-dependencies]
-naga = { path = ".", editable = true }
+flexlock = { path = ".", editable = true }
 
 [tool.pixi.dependencies]
 python = "3.11.*"
