--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ joblib = ">=1.5.2,<2"
 pandas = ">=2.3.2,<3"
 submitit = ">=1.5.2,<2"
 omegaconf = ">=2.3.0,<3"
+loguru = ">=0.7.0,<1"
 
 [tool.pixi.tasks]
 test = { cmd = "pytest" }
@@ -70,6 +71,7 @@ joblib = ">=1.5.2,<2"
 pandas = ">=2.3.2,<3"
 submitit = ">=1.5.2,<2"
 omegaconf = ">=2.3.0,<3"
+loguru = ">=0.7.0,<1"
 
 [tool.pixi.environments]
 build = { features = ["build"] }
