--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,11 @@ hatchling = "*"
 python = "3.11.*"
 gitpython = ">=3.1.45,<4"
 python-xxhash = ">=3.5.0,<4"
-mlflow = ">=3.2.0,<4"
 joblib = ">=1.5.2,<2"
 pandas = ">=2.3.2,<3"
-submitit = ">=1.5.2,<2"
 omegaconf = ">=2.3.0,<3"
 loguru = ">=0.7.0,<1"
+cloudpickle = ">=3.0.0,<4"
 
 [tool.pixi.tasks]
 test = { cmd = "pytest" }
@@ -62,16 +61,19 @@ ipython = "*"
 [tool.pixi.feature.test.pypi-dependencies]
 flexlock = { path = ".", editable = true }
 
+[tool.pixi.feature.mlflow.dependencies]
+mlflow = ">=3.2.0,<4"
+
+
 [tool.pixi.dependencies]
 python = "3.11.*"
 gitpython = ">=3.1.45,<4"
 python-xxhash = ">=3.5.0,<4"
-mlflow = ">=3.2.0,<4"
 joblib = ">=1.5.2,<2"
 pandas = ">=2.3.2,<3"
-submitit = ">=1.5.2,<2"
 omegaconf = ">=2.3.0,<3"
 loguru = ">=0.7.3,<0.8"
+cloudpickle = ">=3.0.0,<4"
 
 [tool.pixi.environments]
 build = { features = ["build"] }
