--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flexlock"
-version = "0.2.1"
+version = "0.2.8"
 authors = [ {name="Quentin Febvre", email="quentin.febvre@gmail.com"} ]
 description = "A lightweight and painless SciOps library"
 readme = "README.md"
@@ -9,15 +9,15 @@ license = "MIT"
 
 [tool.pixi.package]
 name = "flexlock"
-version = "0.2.1"
+version = "0.2.8"
 
 [build-system] 
 build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["flexlock"]
-only-packages = true
+only-include = ["flexlock"]
+# only-packages = true
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
